Sync data to elastic
